--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.13.1"
+  },
+  "dependencies": {
+    "fuse.js": "^5.2.3"
   }
 }
