--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - Accueil: index.md
   - Démarche:
     - Choix techniques: choix technique.md
+    - Multilingue: multilingue.md
   - Guide utilisation:
     - Éléments d'interface: elements interface.md
     - Naviguer dans le réseau: navigation reseau.md
@@ -25,7 +26,7 @@ nav:
     - Données: structure donnees.md
     - Architecture: architecture code source.md
     - Installation: installation.md
-    - Incrire données: inscrire donnees.md
+    - Inscrire données: inscrire donnees.md
 
 # Theme configuration
 theme:
