--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,8 +25,9 @@ nav:
     - Bibliothèques: bibliotheques.md
     - Données: structure donnees.md
     - Architecture: architecture code source.md
-    - Installation: installation.md
+    - Téléchargement et installation: installation.md
     - Inscrire données: inscrire donnees.md
+    - Modifier code source: modifier code source.md
 
 # Theme configuration
 theme:
