--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,8 @@ theme:
   font: false
 extra_css:
   - extras/style.css
+extra_javascript:
+  - https://unpkg.com/mermaid@8.5.1/dist/mermaid.min.js
 
 markdown_extensions:
   - admonition
