[add] tutoriel modifier contenu volet

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
     - Modifier code source:
       - Approches: modifier code source.md
       - Modifier groupes: modifier groupes.md
+      - Modifier volet: modifier volet.md
     
 
 # Theme configuration
