[add] tutoriel traduction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
       - Approches: modifier code source.md
       - Modifier groupes: modifier groupes.md
       - Modifier volet: modifier volet.md
+      - Modifier traduction: modifier traduction.md
     
 
 # Theme configuration
