[fix] breaked links

--- a/doc/fr/mkdocs.yml
+++ b/doc/fr/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: Documentation Otletosphère
-site_url: 'https://hyperotlet.github.io/otletosphere/'
+site_url: 'https://hyperotlet.github.io/otletosphere/fr/'
 repo_name: 'hyperotlet/otletosphere'
 repo_url: 'https://github.com/hyperotlet/otletosphere'
 edit_uri: ''
