--- a/doc/en/mkdocs.yml
+++ b/doc/en/mkdocs.yml
@@ -10,7 +10,10 @@ copyright: '© HyperOtlet 2020'
 # Navigation
 nav:
   - Accueil: index.md
-    
+  - Process:
+    - Choix techniques: process/technical-choices.md
+    - Multilingue: process/multilingual.md
+    - Structure des données: process/data-structure.md
 
 # Theme configuration
 theme:
